[package]
name = "web-scraper-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lambda-flows = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio_wasi = { version = "1.25.0", features = ["rt", "macros"] }
web-scraper-flows = "0.1"
